# axiom-stack

./: .env  .phase2-complete  ADDITIONAL_GOOGLE_APIS_RESEARCH.md  ADDITIONAL_GOOGLE_TOOLS.md  AGENT_ARCHITECTURE_SUMMARY.md  AUDIT_COMPLETION_SUMMARY.md  AXIOM_INFINITY_RESEARCH.md  AXIOM_INFINITY_SPECIFICATION.md  AXIOM_INFINITY_SUMMARY.md  BIGQUERY_AGENT_IMPLEMENTATION_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FINAL.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  FIRESTORE_INTEGRATION_SUMMARY.md  FIXES_SUMMARY.md  GCP_EXECUTOR_SUMMARY.md  GOOGLE_ALWAYS_FREE_APIS_INTEGRATION_SUMMARY.md  GOOGLE_API_KEY_INSTRUCTIONS.md  GOOGLE_API_SECURITY_REMINDER.md  GOOGLE_CLOUD_INTEGRATIONS_SUMMARY.md  GOOGLE_CLOUD_SETUP_INSTRUCTIONS.md  INTEGRATION_COMPLETE.md  MVP_READINESS_REPORT.md  NANO_BANANA_ARCHITECTURE_SUMMARY.md  NANO_BANANA_PHASE_1_2_SUMMARY.md  PHASE_2_COMPLETION.md  README.md  SPECIALIZED_TOOLS_SUMMARY.md  SUPERPOWER_ENGINE_SUMMARY.md  deploy-production.sh  lerna.json  manage-render.sh  master-diagnostic.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml  test-devops.js
docs/: AXIOM_EXPANSION_PLAN.md  AXIOM_EXPANSION_PLAN_AR.md  AXIOM_EXPANSION_PLAN_ENHANCED.md  README.md  (+5 more)
programs/axiom-token/: Anchor.toml  Cargo.toml  deployment-devnet.json  get-program-id.js  package-lock.json  package.json  token-deployment.json  tsconfig.json
programs/axiom-token/scripts/: add-hydra-members.ts  deploy-token.ts  init-hydra.ts  init-transfer-hook.ts  test-tax.ts
programs/axiom-token/src/: lib.rs
programs/axiom-token/tests/: axiom-token.ts
(+43 files in other folders)
