[package]
name = "axiom-token"
version = "0.1.0"
description = "$AXIOM sovereign currency with Token-2022 Transfer Hooks"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "axiom_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
spl-token-2022 = { version = "3.0.3", features = ["no-entrypoint"] }
spl-transfer-hook-interface = "0.6.4"
spl-tlv-account-resolution = "0.6.4"

[profile.release]
overflow-checks = true
